fix a mobile overflow issue on the waves

--- a/priv/styles/main.css
+++ b/priv/styles/main.css
@@ -1253,6 +1253,7 @@ pre code {
 
 .sponsor-featured {
   position: relative;
+  overflow: hidden;
   background: var(--color-faff-pink);
   color: var(--color-black);
   padding: 2rem 0 5rem;
